--- a/css/main.css
+++ b/css/main.css
@@ -1133,85 +1133,6 @@ address {
   }
 }
 
-#carousel {
-  -webkit-perspective: 2000px;
-          perspective: 2000px;
-  overflow: hidden;
-}
-#carousel #scene {
-  width: 61%;
-  margin: 40px auto 0 auto;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
-}
-#carousel #scene .carousel_item {
-  width: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 0 5px 0 2.5px;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-}
-#carousel #scene .carousel_item:not(:first-of-type) {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-#carousel #carousel_btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 20px;
-  margin: 20px auto 0 auto;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -webkit-user-select: none;
-          user-select: none;
-}
-#carousel #carousel_btn .btn {
-  width: 60px;
-  height: 60px;
-  line-height: 40px;
-  padding-left: 7px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 50%;
-  float: left;
-  border: 2px solid #2f2f2f;
-  color: #2f2f2f;
-  font-family: sans-serif;
-  font-size: 14px;
-  cursor: pointer;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  background-color: #FED84C;
-  font-weight: 800;
-  font-size: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-#carousel #carousel_btn .btn:hover {
-  color: #ffffff;
-  background-color: #2f2f2f;
-}
-#carousel #carousel_btn > div:first-child {
-  margin-right: 10px;
-}
-
 .reviews {
   padding-top: 150px;
   padding-bottom: 150px;
@@ -1219,6 +1140,7 @@ address {
   background-size: 960px 200px;
   background-repeat: no-repeat;
   background-position: 100% 100%, 0 0;
+  overflow-x: clip;
 }
 @media screen and (min-width: 800px) {
   .reviews {
@@ -1228,12 +1150,12 @@ address {
 }
 @media screen and (min-width: 1050px) {
   .reviews {
+    padding-top: 180px;
+    padding-bottom: 180px;
     background-color: var(--primary-bg-color);
     background-image: url(../img/bg@2x.png), url(../img/bg-top.png);
     background-repeat: no-repeat;
     background-size: 1400px 200px;
-    padding-top: 180px;
-    padding-bottom: 180px;
   }
 }
 .reviews__title {
@@ -1260,6 +1182,20 @@ address {
   }
 }
 
+.swiper-wrapper {
+  padding-top: 20px;
+}
+@media screen and (min-width: 800px) {
+  .swiper-wrapper {
+    padding-top: 50px;
+  }
+}
+@media screen and (min-width: 1050px) {
+  .swiper-wrapper {
+    padding-top: 60px;
+  }
+}
+
 .frame {
   margin: auto;
   padding: 10px;
@@ -1274,22 +1210,27 @@ address {
   max-width: 300px;
   background-color: #ffffff;
   border-radius: 10px;
+  border: 1px solid var(--secondary-text-color);
 }
 @media screen and (min-width: 768px) {
   .frame {
-    gap: 20px;
+    padding: 10px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    padding: 50px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 10px;
     max-width: 500px;
   }
 }
 @media screen and (min-width: 1050px) {
   .frame {
+    padding: 20px;
+    gap: 20px;
     max-width: 600px;
-    padding: 10px;
   }
 }
 
@@ -1308,17 +1249,10 @@ address {
 }
 @media screen and (min-width: 768px) {
   .frame-text {
-    width: 50%;
+    width: 80%;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-  }
-}
-@media screen and (min-width: 1050px) {
-  .frame-text {
-    margin-top: 60px;
-    margin-bottom: 60px;
-    margin-left: 60px;
   }
 }
 .frame-text__png {
@@ -1339,8 +1273,8 @@ address {
 @media screen and (min-width: 768px) {
   .frame-text__text {
     font-weight: 500;
-    font-size: 16px;
-    line-height: 1.125;
+    font-size: 12px;
+    line-height: 1.1666666667;
     letter-spacing: -1px;
   }
 }
@@ -1354,43 +1288,59 @@ address {
 }
 
 .frame-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin: auto;
 }
 @media screen and (min-width: 768px) {
   .frame-img {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    width: 50%;
   }
 }
 .frame-img__img {
-  width: 80px;
+  margin: auto;
+  width: 70px;
   border-radius: 50%;
   overflow: hidden;
 }
 @media screen and (min-width: 768px) {
   .frame-img__img {
-    width: 100px;
+    width: 60px;
   }
 }
 @media screen and (min-width: 1050px) {
   .frame-img__img {
-    width: 120px;
+    width: 90px;
   }
 }
 .frame-img__title {
   margin-top: 10px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: -1px;
   color: var(--secondary-text-color);
+}
+
+.reviews-button {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 40px;
+  border: 1px solid var(--secondary-text-color);
+}
+.reviews-button .btn {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  font-size: 900;
+  background-color: #FED84C;
+  color: black;
 }
 
 .footer {
