--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -1,80 +1,3 @@
-// Configuration parameters
-// Define width of individual slide (% or px)
-$slide-width: 61%;
-
-// Define gap between the slides
-$slide-separation: 10px;
-
-$distance: 2000px;
-
-#carousel {
-    perspective: $distance;
-    overflow: hidden;
-
-    #scene {
-        width: $slide-width;
-        margin: 40px auto 0 auto;
-        transform-style: preserve-3d;
-        transition: transform 0.5s;
-
-        .carousel_item {
-            width: 100%;
-            box-sizing: border-box;
-            padding: 0 ($slide-separation / 2) 0 ($slide-separation / 4);
-            backface-visibility: hidden;
-
-            &:not(:first-of-type) {
-                position: absolute;
-                left: 0;
-                top: 0;
-            }
-        }
-    }
-
-    #carousel_btn {
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin: 20px auto 0 auto;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
-
-    #carousel_btn .btn {
-        width: 60px;
-        height: 60px;
-        line-height: 40px;
-        padding-left: 7px;
-        box-sizing: border-box;
-        border-radius: 50%;
-        float: left;
-        border: 2px solid #2f2f2f;
-        color: #2f2f2f;
-        font-family: sans-serif;
-        font-size: 14px;
-        cursor: pointer;
-        transition: all 0.3s;
-        background-color: #FED84C;
-        font-weight: 800;
-        font-size: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-
-    }
-
-    #carousel_btn .btn:hover {
-        color: #ffffff;
-        background-color: #2f2f2f;
-    }
-
-    #carousel_btn>div:first-child {
-        margin-right: 10px;
-    }
-}
-
 .reviews { 
     padding-top: 150px;
     padding-bottom: 150px;
@@ -82,6 +5,7 @@ $distance: 2000px;
     background-size: 960px 200px;
     background-repeat: no-repeat;
     background-position: 100% 100%, 0 0;
+    overflow-x: clip;
 
     @media screen and (min-width: 800px) {
         background-image: url(../img/bg-tablet.png), url(../img/bg-top.png);
@@ -89,13 +13,13 @@ $distance: 2000px;
     }
 
     @media screen and (min-width: 1050px) {
+        padding-top: 180px;
+        padding-bottom: 180px;
+
         background-color: var(--primary-bg-color);
         background-image: url(../img/bg@2x.png), url(../img/bg-top.png);
         background-repeat: no-repeat;
         background-size: 1400px 200px;
-        padding-top: 180px;
-        padding-bottom: 180px;
-
     }
     &__title {
         text-align: center;
@@ -109,28 +33,42 @@ $distance: 2000px;
         }
 
     }
+}
+.swiper-wrapper { 
+    padding-top: 20px;
+    @media screen and (min-width: 800px) {
+        padding-top: 50px;
+    }
+    @media screen and (min-width: 1050px) {
+        padding-top: 60px;
+    }
 
-    
 }
 .frame {
     margin: auto;
     padding: 10px;
     display: flex;
     flex-direction: column-reverse;
+
     min-width: 150px;
     max-width: 300px;
+
     background-color: #ffffff;
     border-radius: 10px;
+    border: 1px solid var(--secondary-text-color);
 
     @media screen and (min-width: 768px) {
-        gap: 20px;
+        padding: 10px;
         flex-direction: row;
-        padding: 50px;
+        justify-content: space-between;
+
+        gap: 10px;
         max-width: 500px;
     }
     @media screen and (min-width: 1050px) {
+        padding: 20px;
+        gap: 20px;
         max-width: 600px;
-        padding: 10px;
 
     }
 }
@@ -141,15 +79,15 @@ $distance: 2000px;
     flex-direction: column;
     align-self: flex-start;
     @media screen and (min-width: 768px) {
-        width: 50%;
+        width: 80%;
         justify-content: center;
 
     }
-    @media screen and (min-width: 1050px) {
-        margin-top: 60px;
-        margin-bottom: 60px;
-        margin-left: 60px;
-    }
+    // @media screen and (min-width: 1050px) {
+    //     margin-top: 30px;
+    //     margin-bottom: 30px;
+    //     margin-left: 30px;
+    // }
     
 
     &__png {
@@ -165,7 +103,7 @@ $distance: 2000px;
         color: var(--secondary-text-color);
         @include font($fw: 400, $fs: 12px, $lh: 14px, $ls: -1px);
         @media screen and (min-width: 768px) {
-            @include font($fw: 500, $fs: 16px, $lh: 18px, $ls: -1px);
+            @include font($fw: 500, $fs: 12px, $lh: 14px, $ls: -1px);
         }
     
         @media screen and (min-width: 1050px) {
@@ -176,28 +114,50 @@ $distance: 2000px;
 
 }
 .frame-img {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: auto;
     @media screen and (min-width: 768px) {
         justify-content: center;
-        width: 50%;
     }
 
     &__img {
-        width: 80px;
+        margin: auto;
+        width: 70px;
     
         border-radius: 50%;
         overflow: hidden;
         @media screen and (min-width: 768px) {
-            width: 100px;
+            width: 60px;
         }
         @media screen and (min-width: 1050px) {
-            width: 120px;
+            width: 90px;
         }
     }
     &__title {
         margin-top: 10px;
+
+        text-align: center;
+        @include font($fw: 700, $fs: 14px, $lh: 16px, $ls: -1px);
         color: var(--secondary-text-color);
+    }
+}
+
+.reviews-button {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+
+    border: 1px solid var(--secondary-text-color);
+
+
+    .btn {
+
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+
+        font-size: 900;
+        background-color: #FED84C;
+        color: black;
     }
 }
